[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/EightBitDragon-anqx.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/thumbnails/thumbnail_0.png" type="Texture" id=2]
[ext_resource path="res://assets/arrow_button.png" type="Texture" id=3]
[ext_resource path="res://assets/menu_panel.png" type="Texture" id=4]
[ext_resource path="res://title_menu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 1 )

[node name="title_menu" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 771.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_select_label" type="Label" parent="background"]
margin_left = 432.0
margin_right = 864.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Level select"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thumbnail" type="TextureRect" parent="background"]
margin_left = 384.0
margin_top = 200.0
margin_right = 1664.0
margin_bottom = 968.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_left" type="Button" parent="background"]
margin_left = 320.0
margin_top = 280.0
margin_right = 532.0
margin_bottom = 486.0
rect_scale = Vector2( -0.6, 0.7 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_right" type="Button" parent="background"]
margin_left = 960.0
margin_top = 288.0
margin_right = 1172.0
margin_bottom = 494.0
rect_scale = Vector2( 0.6, 0.7 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_name" type="Label" parent="background"]
margin_left = 416.0
margin_top = 640.0
margin_right = 860.0
margin_bottom = 716.0
custom_fonts/font = SubResource( 6 )
text = "Plains"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_ok" type="Button" parent="background"]
margin_left = 1024.0
margin_top = 640.0
margin_right = 1144.0
margin_bottom = 720.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 7 )
text = "Ok"
flat = true
